force-app/main/default/objects/Customer_Feedback__c/Customer_Feedback__c.object-meta.xml
<CustomObject>
    <label>Customer Feedback</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Customer Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>