force-app/main/default/objects/Customer_Feedback__c/fields/Field_Technician__c.field-meta.xml
<CustomField>
    <fullName>Field_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Technician</label>
    <referenceTo>Field_Technician__c</referenceTo>
    <relationshipLabel>Customer Feedback</relationshipLabel>
    <relationshipName>Customer_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>